--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -52,7 +52,9 @@ body {
   width: 1rem;
   height: 1rem;
 }
-
+.icon--magnifying-glass {
+  opacity: 0.3;
+}
 
 /* ------ Generic & Re-usable ------ */
 /* Simple Center */
@@ -67,12 +69,13 @@ body {
 }
 .simple-center__vertical-inner {
   display: inline-block;
-  margin-left: 0.1rem;
+  margin: 0 0.1em;
 }
 /* Simple Button */
 .simple-button {
-  padding: 0 0.2em;
-  font-size: 1em;
+  height: 1.4em;
+  padding: 0 0.4em;
+  font-size: 0.875em;
   border: 1px solid;
   user-select: none;
 }
@@ -138,6 +141,7 @@ body {
 }
 /* Simple Input (Input text field) */
 .simple-input {
+  padding-left: 0.2em;
   border: none;
 }
 /* Simple Disabled Text */
@@ -175,10 +179,12 @@ body {
 }
 .simple-dropdown__select-box {
   width: 100%;
-  padding: 0 0.1rem;
+  padding: 0 0.1em 0 0.2em;
+  text-align: left;
   /* Pimp */
   appearance: menulist-button;
   -webkit-appearance: menulist-button;
+  cursor: default;
   border: 1px solid;
 }
 .simple-dropdown__content {
@@ -201,6 +207,7 @@ body {
   position: relative;
   display: flex;
   width: 100%;
+  border: none !important;
   /*padding: 0 0.1rem;*/
 }
 .input-dropdown__input-field__back {
@@ -438,6 +445,7 @@ body {
   flex: 1;
   position: relative;
   top: -2px;
+  left: 2px;
   overflow: hidden;
   /* Text */
   font-size: 16px;
@@ -520,7 +528,7 @@ body {
 }
 .header__search {
   display: flex;
-  padding: 0.25em;
+  padding: 0.075em 0em 0.09em 0.2em;
   overflow: hidden;
 }
 .header__search__left {
@@ -614,6 +622,7 @@ body {
   --slider-size: 1em;
   display: inline-block;
   position: relative;
+  right: 0.2em;
   height: var(--slider-size);
   cursor: pointer;
 }
@@ -670,9 +679,9 @@ body {
 /* HomePage Box */
 .home-page__box {
   display: block;
-  margin: 0 auto;
-  margin-bottom: 1rem;
+  margin: 0 auto 1em;
   width: 30em;
+  line-height: 1.3;
   border: 1px solid;
 }
 .home-page__box-head {
@@ -695,6 +704,12 @@ body {
 }
 .home-page__box-item-icon {
   margin-right: 0.35rem;
+}
+.home-page__box .icon {
+  vertical-align: -0.225em;
+}
+.home-page__box--extras .icon {
+  vertical-align: -0.25em;
 }
 /* HomePage Box - Upgrades */
 .home-page__box--upgrades b,
@@ -889,8 +904,9 @@ body {
   width: 40em;
 }
 .curate-page input[type="checkbox"] {
-  width: 2rem;
-  height: 2rem;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.4em;
 }
 /* (Edit how other classes appear in this page) */
 .curate-page .input-dropdown__content {
@@ -1056,6 +1072,7 @@ body {
 .curate-box-buttons {
   justify-content: space-between;
   display: flex;
+  margin-top: 0.3em;
 }
 .curate-box-buttons__button {
   margin: 0 0.2rem;
@@ -1110,6 +1127,9 @@ body {
 .log-page__dropdown-item {
   display: flex;
 }
+.log-page__dropdown-item input[type="checkbox"] {
+  margin-right: 0.1em;
+}
 .log-page__dropdown-item-text {
   display: inline-block;
   overflow: hidden;
@@ -1137,7 +1157,7 @@ body {
 }
 /* Sidebar */
 .game-browser__sidebar {
-  --divider-width: 6px;
+  --divider-width: 4px;
   display: flex;
   flex: 0 0 auto;
   min-width: var(--divider-width);
@@ -1426,8 +1446,9 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  width: calc(1px * var(--height));
-  height: calc(1px * var(--height));
+  width: calc(0.8px * var(--height));
+  height: calc(0.8px * var(--height));
+  margin: calc(0.09px * var(--height)) calc(0.2px * var(--height)) 0 calc(0.05px * var(--height));
 }
 .game-list-item__right {
   flex: 1;
@@ -1476,9 +1497,9 @@ body {
   overflow: hidden;
   user-select: none;
   padding-left: 0.2rem;
+  font-size: calc(0.8px * var(--height));
 }
 .game-list-header-column__divider {
-  width: 2px;
   height: auto;
 }
 /* GameList Item & GameList Header Column (Size) */
@@ -1578,7 +1599,10 @@ body {
 .game-grid__no-games__title {
   font-size: 2em;
 }
-
+/* GameGrid Align */
+.ReactVirtualized__Grid__innerScrollContainer {
+  margin: 0 auto;
+}
 
 
 /* ------ Playlist ------ */
@@ -1781,7 +1805,7 @@ body {
 .developer-page__title {
   font-size: 2.5em;
 }
-.developer-page__buttons > * {
+.developer-page__buttons {
   margin: 0.25rem;
 }
 .developer-page__log {
@@ -1798,7 +1822,7 @@ body {
 }
 /* Service Box */
 .service-box {
-  margin: 0.5rem;
+  margin: 0.5rem 1.8rem 1rem;
   padding: 0.5rem;
   text-align: initial;
 }
@@ -1864,6 +1888,10 @@ body {
 .config-page input[type="button"].save-and-restart {
   font-size: 1.075em;
   margin: 0 auto;
+  height: 1.4em;
+}
+.config-page label {
+  padding-left: 0.15em;
 }
 /* Setting */
 .setting {
@@ -1909,6 +1937,9 @@ body {
 .setting__row__content {
   flex: 1 1 auto;
 }
+.setting__row__content .simple-selector {
+  margin-right: 0;
+}
 /* Setting Row Content - FilePoint Path */
 .setting__row__content--filepath-path {
   display: flex;
@@ -1917,7 +1948,8 @@ body {
 }
 .setting__row__content--filepath-path .flashpoint-path__input {
   flex: 1;
-  border: 1px solid;
+  margin-right: 0.5rem;
+  padding: 0.05rem 0 0 0.2rem;
 }
 .setting__row__content--filepath-path .flashpoint-path__input input[type="text"] {
   width: 100%;
