feat: Improved Tag Input Field functions

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -528,7 +528,7 @@ body {
 }
 .header__search {
   display: flex;
-  padding: 0.075em 0em 0.09em 0.2em;
+  padding: 0rem 0.1rem 0rem 0.1rem;
   overflow: hidden;
 }
 .header__search__left {
@@ -547,7 +547,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 1.5em;
 }
 .header__search__right__inner {
   width: fit-content;
