--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -2002,8 +2002,17 @@ body {
   font-weight: bold;
   user-select: none;
 }
+.setting__row__title--flex {
+  display: flex;
+}
+.setting__row__title--align-left {
+  text-align: left;
+}
 .setting__row__content {
   flex: 1 1 auto;
+}
+.setting__row__content--right-align {
+  text-align: right;
 }
 .setting__row__content .simple-selector {
   margin-right: 0;
@@ -2055,6 +2064,12 @@ body {
 .setting__row__content--input-field .input-dropdown__input-field,
 .setting__row__content--input-field .input-dropdown__content {
   border: 0px;
+}
+.setting__row__ext-icon {
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 4rem;
+  margin-right: 0.5rem; 
 }
 
 /** ----- Progress Components ------ **/
